--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,16 @@
   padding: 0 15px;
 }
 .brand-img {
-  width: 80px;
+  width: 60px;
 }
 .header {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(255, 172, 152, 0.5);
+}
+.navbar-brand {
+  display: flex;
+  align-items: center;
 }
 .header-cont {
   display: flex;
@@ -19,7 +26,8 @@
 .hero {
   background-image: linear-gradient(
       to top,
-      rgba(162, 103, 138, 0.5), rgba(255, 255, 255, 0.5)
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.7)
     ),
     url(../images/hero-img.png);
   background-size: contain;
@@ -36,7 +44,230 @@
 }
 .hero-text {
   text-align: center;
-  width: 700px;
+  width: 600px;
   margin: 0 auto;
+  color: #000;
+  font-weight: 600;
+}
+.problem {
+  margin-top: 20px;
+  margin-bottom: 60px;
+}
+.prob-title {
+  text-align: center;
+}
+.prob-text {
+  text-align: center;
+}
+.solution {
+  margin-bottom: 100px;
+}
+.sol-title {
+  text-align: center;
+}
+.sol-text {
+  text-align: center;
+}
+.for-item {
+  width: 450px;
+  background-color: rgba(182, 109, 170, 0.1);
+  padding-top: 40px;
+  padding-bottom: 40px;
+  border-radius: 20px;
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
+    0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+}
+.for-list {
+  display: flex;
+  gap: 100px;
+}
+.for-title {
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  width: 250px;
+}
+.for-text {
+  text-align: center;
+  width: 300px;
+  margin: 0 auto;
+}
+.for {
+  margin-bottom: 100px;
+}
+.advant-img {
+  width: 80px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+.advant-item {
+  width: 300px;
+  border: 1px solid #4d3c77;
+  padding: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 5px;
+  height: 440px;
+}
+.advant-item-title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.advant-text {
+  text-align: center;
+}
+.advant-list {
+  display: grid;
+  grid-template-columns: repeat(2, 300px);
+  grid-template-rows: 220px 200px 220px 200px 220px;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  width: 620px;
+  margin: 0 auto;
+}
+.advant-title {
+  text-align: center;
+  margin-bottom: 80px;
+}
+.advant-item:nth-child(1) {
+  grid-area: 1 / 1 / 3 / 2;
+}
+.advant-item:nth-child(2) {
+  grid-area: 2 / 2 / 4 / 3;
+}
+.advant-item:nth-child(3) {
+  grid-area: 3 / 1 / 5 / 2;
+}
+.advant-item:nth-child(4) {
+  grid-area: 4 / 2 / 6 / 3;
+}
+.btn-support {
+  width: 180px;
+  height: 50px;
+  background-color: #7a6daa;
+  border: 3px solid #4d3c77;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  padding-top: 15px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  gap: 20px;
+}
+.btn-text {
+  font-size: 13px;
+  line-height: 120%;
+  text-align: left;
   color: #fff;
 }
+.support-img {
+  width: 30px;
+  margin-bottom: 10px;
+}
+@media screen and (max-width: 480px) {
+  .container {
+    width: 480px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+  .hero {
+    background-image: linear-gradient(
+        to top,
+        rgba(255, 255, 255, 0.7),
+        rgba(255, 255, 255, 0.7)
+      ),
+      url(../images/hero-img.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: right;
+    height: 300px;
+  }
+  .title {
+    padding-top: 100px;
+    width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 80px;
+  }
+  .hero-text {
+    text-align: center;
+    width: 450px;
+    margin: 0 auto;
+    color: #000;
+    font-weight: 600;
+  }
+  .for-item {
+    width: 450px;
+    background-color: rgba(182, 109, 170, 0.1);
+    padding-top: 40px;
+    padding-bottom: 40px;
+    border-radius: 20px;
+    box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
+      0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+  }
+  .for-title {
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    width: 250px;
+  }
+  .for-text {
+    text-align: center;
+    width: 300px;
+    margin: 0 auto;
+  }
+  .for {
+    margin-bottom: 100px;
+  }
+  .advant-img {
+    width: 80px;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+  .advant-item {
+    width: 215px;
+    border: 1px solid #4d3c77;
+    padding: 20px;
+    border-radius: 5px;
+    height: 440px;
+  }
+  .advant-item-title {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .advant-text {
+    text-align: center;
+  }
+  .advant-list {
+    display: grid;
+    grid-template-columns: repeat(2, 215px);
+    grid-template-rows: 220px 200px 220px 200px 220px;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    width: 450px;
+    margin: 0 auto;
+  }
+  .advant-title {
+    text-align: center;
+    margin-bottom: 80px;
+  }
+  .advant-item:nth-child(1) {
+    grid-area: 1 / 1 / 3 / 2;
+  }
+  .advant-item:nth-child(2) {
+    grid-area: 2 / 2 / 4 / 3;
+  }
+  .advant-item:nth-child(3) {
+    grid-area: 3 / 1 / 5 / 2;
+  }
+  .advant-item:nth-child(4) {
+    grid-area: 4 / 2 / 6 / 3;
+  }
+}
+background-image: linear-gradient(
+  to top,
+  rgba(255, 172, 152, 0.2),
+  rgba(255, 172, 152, 0)
+);
