--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: right;
-  height: 600px;
+  padding-bottom: 400px;
 }
 .title {
   padding-top: 100px;
@@ -174,13 +174,13 @@
 }
 @media (max-width: 480px) {
   .container{
-    width: 320px;
+    width: 100%;
     margin: 0 auto;
     padding: 0 15px;
   }
   .logo-mobile-img{
     display: block;
-    width: 80px;
+    width: 100px;
   }
   .logo-img{
     display: none;
@@ -191,5 +191,18 @@
   .logo{
     display: flex;
     align-items: center;
+  }
+  .hero{
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .title{
+    font-size: 20px;
+    width: 200px;
+    margin-bottom: 20px;
+  }
+  .hero-text{
+    font-size: 11px;
+    width: 250px;
   }
 }
