--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,14 @@
   margin-bottom: 10px;
 }
 @media (max-width: 480px) {
+  body{
+    padding-right: 0 !important;
+  }
+  .offcanvas{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+  }
   .container {
     width: 100%;
     margin: 0 auto;
