--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@
   .offcanvas{
     position: fixed !important;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     top: 0;
     left: 0;
     background-color: #fff;
