--- a/css/style.css
+++ b/css/style.css
@@ -227,9 +227,12 @@
     position: fixed !important;
     width: 100vw;
     height: 100%;
-    top: 0;
-    left: 0;
+    top: 0 !important;
+    left: 0 !important;
     background-color: #fff;
+  }
+  .header{
+    width: 100vw;
   }
   .btn-close{
     margin-left: 100px !important;
@@ -239,7 +242,7 @@
     gap: 0px;
   }
   .container {
-    width: 100%;
+    width: 100vw;
     margin: 0 auto;
     padding: 0 15px;
   }
@@ -290,11 +293,14 @@
     font-size: 11px;
     width: 280px;
     color: var(--color3);
+    text-align: center;
+    margin: 0 auto;
   }
   .for-list {
     display: block;
     margin: 0 auto;
     margin-bottom: 50px;
+    padding: 0;
   }
   .for-item {
     width: 250px;
@@ -352,6 +358,8 @@
     grid-template-rows: repeat(5, 160px);
     grid-column-gap: 15px;
     grid-row-gap: 15px;
+    padding: 0;
+    width: 255px;
   }
   .advant-item:nth-child(1) {
     grid-area: 1 / 1 / 3 / 2;
