--- a/css/style.css
+++ b/css/style.css
@@ -225,21 +225,20 @@
   }
   .offcanvas{
     position: fixed !important;
-    width: 100vw;
-    height: 100%;
     top: 0 !important;
     left: 0 !important;
     background-color: #fff;
+    border: none !important;
+    display: block !important;
+    width: 100vw !important;
+    height: 100%;
   }
   .header{
     width: 100vw;
   }
-  .btn-close{
-    margin-left: 100px !important;
-  }
   .offcanvas-header{
     display: flex;
-    gap: 0px;
+    justify-content: space-between;
   }
   .container {
     width: 100vw;
@@ -295,6 +294,12 @@
     color: var(--color3);
     text-align: center;
     margin: 0 auto;
+  }
+  .problem{
+    margin-bottom: 40px;
+  }
+  .solution{
+    margin-bottom: 80px;
   }
   .for-list {
     display: block;
