--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -2,10 +2,9 @@
     margin: 0 auto;
     padding: 0 15px;
     @media screen and (min-width:388px) {
-        width: 388px;
+        min-width: 388px;
     }
     @media screen and (min-width:1200px) {
-        max-width: 1200px;
-        outline: 2px solid olivedrab;
+        min-width: 1200px;
     }
 }
