--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -14,6 +14,7 @@
     }
   }
   &__title {
+    color: $title-color;
     font-weight: 500;
     font-style: Medium;
     font-size: 32px;
@@ -22,8 +23,20 @@
     letter-spacing: 0%;
     text-align: center;
     color: $title-color;
+    @media screen and (min-width: 1200px) {
+      margin: 0 auto;
+      width: 784px;
+      font-weight: 500;
+      font-style: Medium;
+      font-size: 64px;
+      line-height: 111.00000000000001%;
+      letter-spacing: 0%;
+      text-align: center;
+      margin-bottom: 24px;
+    }
   }
   &__text {
+    color: $text-color;
     font-weight: 400;
     font-size: 16px;
     line-height: 140%;
@@ -31,35 +44,50 @@
     text-align: center;
     font-variant: small-caps;
     margin-bottom: 57px;
+    @media screen and (min-width: 1200px) {
+      margin: 0 auto;
+      width: 784px;
+      font-weight: 400;
+      font-style:normal;
+      font-size: 22px;
+      line-height: 140%;
+      letter-spacing: 0%;
+      text-align: center;
+      font-variant: small-caps;
+      margin-bottom: 64px;
+    }
   }
   &__btn {
+    display: block;
     padding: 13px 16px;
+    width: 161px;
     background-color: $title-color;
     font-weight: 600;
     font-size: 16px;
-    display: block;
     margin: 0 auto;
     line-height: 140%;
     letter-spacing: 0%;
     border-radius: 8px;
     border: none;
     color: $white-color;
+    @media screen and (min-width: 1200px) {
+      padding: 11.5px 32.5px;
+      width: 210px;
+    }
   }
   &__blur1 {
     position: absolute;
     top: 165px;
-    left: 254px;
+    right: 0;
     &__img {
-      opacity: 0.05;
       mix-blend-mode: Overlay;
     }
   }
   &__blur2 {
     position: absolute;
-    top: 680px;
+    bottom: 0;
     left: 16px;
     &__img {
-      opacity: 0.05;
       mix-blend-mode: Overlay;
     }
   }
