--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -1,10 +1,42 @@
-.about{
-    padding: 62px 0 26px;
-    &__title::before{
-        content: "";
-        display: inline-block;
-        width: 24px;
-        height: 24px;
-        background-image: url(../../images/blur1.png);
-    }
+.about {
+  padding: 62px 0 26px;
+  position: relative;
+  &__title::before {
+    content: "";
+    display: inline-block;
+    background-image: url(../../images/before-about.png);
+    background-size: cover;
+    width: 24px;
+    height: 24px;
+    margin-right: 11px;
+    margin-left: 7px;
+  }
+  &__title {
+    text-align: start;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 111.00000000000001%;
+    letter-spacing: 0%;
+    color: #1d2237;
+  }
+  &__text {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    text-align: start;
+    color: #54547E;
+    font-size: 16px;
+    line-height: 160%;
+    letter-spacing: 0%;
+    font-variant: small-caps;
+    margin-left: 10px;
+  }
+  &__robot{
+    position: absolute;
+    right: 16px;
+    top: 306px;
+  }
+}
+.losses{
+    margin-bottom: 61px;
 }
