--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -17,6 +17,7 @@
     color: $title-color;
     font-weight: 500;
     font-style: Medium;
+    font-family: "Montserrat", sans-serif;
     font-size: 32px;
     margin-bottom: 24px;
     line-height: 111.00000000000001%;
@@ -37,6 +38,7 @@
   }
   &__text {
     color: $text-color;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 140%;
@@ -59,6 +61,8 @@
   }
   &__btn {
     display: block;
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
     padding: 13px 16px;
     width: 161px;
     background-color: $title-color;
